# tuna-scraper

./: .clinerules  .gitignore  README.md  canned_tuna_schema.json  check_page.py  main.py  pyproject.toml  ruff.toml  scrape_example.py
carrefour/: extract_info_images.py  match_products.py
off/: gemini_schema.py  open_food_scrape.py  send_gemini.py
