[project]
name = "tuna-scraper"
version = "0.1.0"
description = "A respectful web scraper for Carrefour tuna products"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "dotenv>=0.9.9",
    "google-genai>=1.4.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pytesseract>=0.3.13",
    "requests>=2.32.3",
    "selenium>=4.29.0",
    "urllib3>=2.0.0",
]

[project.scripts]
tuna-scraper = "main:main"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
